# nbites

src/boss/: Boss.cpp
src/man/: CMakeLists.txt  Man.cpp
src/man/behaviors/: FallController.py  SweetMoves.py
src/man/behaviors/kickDecider/: kicks.py
src/man/behaviors/players/: KickBuilderStates.py  pKickBuilder.py
src/man/gamestate/: GameStateModule.cpp  GameStateModule.h
src/man/guardian/: GuardianModule.cpp  GuardianModule.h
src/man/image/: ImageAcquisition.h  ImageConverterModule.cpp
src/man/motion/bhwalk/: BHWalkProvider.cpp  CMakeLists.txt  MotionSelector.cpp  MotionSelector.h  WalkingEngine.cpp  WalkingEngine.h  output.txt  test.cpp
src/man/motion/bhwalk/Platform/: SystemCall.h
src/man/motion/bhwalk/Representations/: Blackboard.h
src/man/motion/bhwalk/Tools/: InverseKinematic.h
src/man/sensors/: SensorsModule.cpp
src/man/support/: CameraCalibrate.cpp
src/man/vision/: BallDetector.cpp  BallDetector.h  Blob.cpp  Blob.h  Blobber.h  VisionModule.cpp
src/nbcross/: nbfuncs.cpp  nbfuncs.h  vision_defs.cpp
src/nbtool/src/nbtool/images/: Ballimage.java  Y16image.java
src/nbtool/src/nbtool/util/: U.java
src/share/cmake/: atom.cmake
src/share/include/: Camera.h
src/share/portals/: RoboGrams.h
src/tool/: BallImageTool.cpp  BallImageTool.h  CMakeLists.txt  DataSelector.cpp  DataSelector.h  Makefile  ballimage_main.cpp  balltest_main.cpp
src/tool/ballimage/: BallImage.cpp  BallImage.h  CMakeLists.txt
src/tool/balltest/: BallTest.cpp  BallTest.h  CMakeLists.txt  Makefile
src/tool/unlog/: CMakeLists.txt
(+34 files in other folders)
